section 1 text alignment corrected

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,9 +95,10 @@ header{
 	margin-top: 15%;
 	margin-right: auto;
 	margin-left: auto;
-	width: 50%;
+	width: 100%;
 }
 .centertext{
+	text-align: center;
 	font-size: 80px;
 	font-weight: bolder;
 }
@@ -106,16 +107,20 @@ header{
 	margin-bottom: 10px;
 }
 .section1des{
+	text-align: left;
 	font-size: 25px;
 	font-weight: normal;
+
+	width: 320px;
 
 	border-left-style: solid;
 	border-left-color: red;
 	border-radius: 5px;
 	border-width: 5px;
 
-	padding-left: 25px;
-	margin-left: 35px;
+	padding-left: 30px;
+	margin: auto;
+
 }
 
 
